# sample-agentic-chatbot-accelerator

./: .gitignore  .graphqlconfig.yml  .pre-commit-config.yaml  .prettierrc  .semgrepignore  CONTRIBUTING.md  CONTRIBUTORS.md  Makefile  README.md  package-lock.json  package.json  pyproject.toml
docs/diagrams/: architecture.xml
docs/src/: agent-factory.md  api.md  development-guide.md  evaluation.md  expanding-ai-tools.md  graph-agents.md  how-to-deploy.md  kb-management.md  observability-insights.md  token-streaming-architecture.md  troubleshooting.md
iac-cdk/: .graphqlconfig.yml  cdk.json  package-lock.json  package.json  tsconfig.json
iac-cdk/lib/: aca-stack.ts
iac-cdk/lib/agent-core/: index.ts
iac-cdk/lib/api/: agent-core-runtime.ts  evaluation-api.ts  experiments-api.ts  http-api-backend.ts  index.ts  knowledge-base.ts  (+2 more)
iac-cdk/test/: aca.test.ts
iac-terraform/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf  versions.tf
iac-terraform/scripts/: build-image.sh  build-layers.sh
lib/: aca-stack.ts
lib/agent-core/: index.ts
lib/api/: agent-core-runtime.ts  evaluation-api.ts  http-api-backend.ts  index.ts  knowledge-base.ts  websocket-api-backend.ts  websocket-resolvers.ts
lib/authentication/: index.ts
lib/cleanup/: index.ts
lib/data-processing/: index.ts  steps.ts
lib/genai-interface/: index.ts
lib/knowledge-base/: index.ts
lib/layer/: index.ts
lib/observability/: index.ts
lib/shared/: index.ts  shared-asset-bundler.ts  types.ts
lib/user-interface/: index.ts  public-website.ts
(+393 files in other folders)
